[gd_scene load_steps=57 format=2]

[ext_resource path="res://Scripts/EnemigoTierraEscudo.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Knight/Block/Block 01.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Knight/Block/Block 02.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Knight/Block/Block 03.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Knight/Block/Block 04.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Knight/Block/Block 05.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Knight/Block/Block 06.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Knight/Block/Block 07.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Knight/Attack/attack 01.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Knight/Attack/attack 02.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Knight/Attack/attack 03.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Knight/Attack/attack 04.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Knight/Attack/attack 05.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Knight/Attack/attack 06.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Knight/Attack/attack 07.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Knight/Attack/attack 08.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Knight/Attack/attack 09.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Knight/Attack/attack 10.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Knight/Death/death 01.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Knight/Death/death 02.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Knight/Death/death 03.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Knight/Death/death 04.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Knight/Death/death 05.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Knight/Death/death 06.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Knight/Death/death 07.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Knight/Death/death 08.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Knight/Death/death 09.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Knight/Death/death 10.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Knight/Death/death 11.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Knight/Death/death 12.png" type="Texture" id=30]
[ext_resource path="res://Sprites/Knight/Death/death 13.png" type="Texture" id=31]
[ext_resource path="res://Sprites/Knight/Death/death 14.png" type="Texture" id=32]
[ext_resource path="res://Sprites/Knight/Death/death 15.png" type="Texture" id=33]
[ext_resource path="res://Sprites/Knight/Death/death 16.png" type="Texture" id=34]
[ext_resource path="res://Sprites/Knight/Death/death 17.png" type="Texture" id=35]
[ext_resource path="res://Sprites/Knight/Death/death 18.png" type="Texture" id=36]
[ext_resource path="res://Sprites/Knight/Death/death 19.png" type="Texture" id=37]
[ext_resource path="res://Sprites/Knight/Death/death 20.png" type="Texture" id=38]
[ext_resource path="res://Sprites/Knight/Death/death 21.png" type="Texture" id=39]
[ext_resource path="res://Sprites/Knight/Walk/walk 01.png" type="Texture" id=40]
[ext_resource path="res://Sprites/Knight/Walk/walk 02.png" type="Texture" id=41]
[ext_resource path="res://Sprites/Knight/Walk/walk 03.png" type="Texture" id=42]
[ext_resource path="res://Sprites/Knight/Walk/walk 04.png" type="Texture" id=43]
[ext_resource path="res://Sprites/Knight/Walk/walk 05.png" type="Texture" id=44]
[ext_resource path="res://Sprites/Knight/Walk/walk 06.png" type="Texture" id=45]
[ext_resource path="res://Sprites/Knight/Walk/walk 07.png" type="Texture" id=46]
[ext_resource path="res://Sprites/Knight/Idle/idle 01.png" type="Texture" id=47]
[ext_resource path="res://Sprites/Knight/Idle/idle 02.png" type="Texture" id=48]
[ext_resource path="res://Sprites/Knight/Idle/idle 03.png" type="Texture" id=49]
[ext_resource path="res://Sprites/Knight/Idle/idle 04.png" type="Texture" id=50]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ), ExtResource( 8 ) ],
"loop": true,
"name": "Bloqueo",
"speed": 20.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "Atacar",
"speed": 12.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ) ],
"loop": true,
"name": "Muerte",
"speed": 11.0
}, {
"frames": [ ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 46 ) ],
"loop": true,
"name": "Movimiento",
"speed": 7.0
}, {
"frames": [ ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "Danio",
"speed": 3.0
}, {
"frames": [ ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ) ],
"loop": true,
"name": "Quieto",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 17, 52 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 19, 55 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 128, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 70, 55 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 28, 50 )

[node name="EnemigoTierraEscudo" type="KinematicBody2D" groups=[
"persist",
"enemigo",
]]
collision_layer = 16
collision/safe_margin = 0.05
script = ExtResource( 1 )

[node name="AnimacionEnemigo" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3.2 )
frames = SubResource( 1 )
animation = "Danio"
frame = 1
playing = true

[node name="ColisionEnemigo" type="CollisionShape2D" parent="."]
position = Vector2( -10, 15.4 )
shape = SubResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2( -1, -3 )
collision_layer = 16
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( -9, 16 )
shape = SubResource( 3 )

[node name="CampoDeVision" type="Area2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( -8, 12 )
collision_layer = 4
__meta__ = {
"_edit_group_": true
}

[node name="ColisionCampoDeVision" type="CollisionShape2D" parent="CampoDeVision"]
position = Vector2( 0, -21 )
shape = SubResource( 4 )

[node name="CampoAtaque" type="Area2D" parent="."]
position = Vector2( -15, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="ColisionAtaque" type="CollisionShape2D" parent="CampoAtaque"]
position = Vector2( 6, 14 )
shape = SubResource( 5 )

[node name="TimerAtaque" type="Timer" parent="."]
one_shot = true

[node name="RayCastEnemigo" type="RayCast2D" parent="."]
position = Vector2( 5, 19 )
enabled = true

[node name="CampoEspada" type="Area2D" parent="."]
position = Vector2( 44, 12 )
collision_layer = 2

[node name="ColisionEspada" type="CollisionShape2D" parent="CampoEspada"]
shape = SubResource( 6 )

[connection signal="animation_finished" from="AnimacionEnemigo" to="." method="_on_AnimacionEnemigo_animation_finished"]
[connection signal="body_entered" from="CampoDeVision" to="." method="_on_CampoDeVision_body_entered"]
[connection signal="body_exited" from="CampoDeVision" to="." method="_on_CampoDeVision_body_exited"]
[connection signal="body_entered" from="CampoAtaque" to="." method="_on_CampoAtaque_body_entered"]
[connection signal="body_exited" from="CampoEspada" to="." method="_on_CampoEspada_body_exited"]
